projects/vb6parse/snapshots/parsers/cst/objects/set/set_statement_preserves_whitespace.snap
---
source: projects/vb6parse/tests/objects/set.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetKeyword
                  text: Set
                - kind: Whitespace
                  text: "   "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: obj
                - kind: Whitespace
                  text: "   "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: "   "
                - kind: NewExpression
                  children:
                    - kind: NewKeyword
                      text: New
                    - kind: Whitespace
                      text: "   "
                    - kind: Identifier
                      text: MyClass
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
